--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Astroid V3",
+  "name": "Thursday is cool",
   "description": "Astroid, a proxy that supports now.gg and uses Ultraviolet, a highly sophisticated proxy used for evading internet censorship or accessing websites in a controlled sandbox using the power of service-workers and more!",
   "repository": "https://github.com/VyperGroup/astroidv3",
   "logo": "https://raw.githubusercontent.com/VyperGroup/AstroidV3/main/static/images/128x128.png",
